feat: kickplate api (#7)
